syntax = "proto3";

package gate;

message MsgPing
{
                  
}
message MsgPong
{
                  
}
